--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://apps.sidestore.io/apps.json</title>
-<meta http-equiv="refresh" content="0; URL https://apps.sidestore.io/apps.json">
-<link rel="canonical" href="https://apps.sidestore.io/apps.json">
-<body style="text-align: center">
-Redirecting to <a href="https://apps.sidestore.io/apps.json">https://apps.sidestore.io/apps.json</a>
+<title>Redirecting to apps.json</title>
+<meta http-equiv="refresh" content="0; URL apps.json">
+<link rel="canonical" href="apps.json">
