--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to apps.json</title>
-<meta http-equiv="refresh" content="0; URL apps.json">
-<link rel="canonical" href="apps.json">
+<title>Redirecting to https://apps.sidestore.io/apps.json</title>
+<meta http-equiv="refresh" content="0; URL='https://apps.sidestore.io/apps.json'">
+<link rel="canonical" href="https://apps.sidestore.io/apps.json">
