Add favicon header

--- a/.index.html
+++ b/.index.html
@@ -9,4 +9,7 @@ redirect_to:
 <title>Redirecting to https://apps.sidestore.io/apps.json</title>
 <meta http-equiv="refresh" content="0; URL= https://apps.sidestore.io/apps.json">
 <link rel="canonical" href="https://apps.sidestore.io/apps.json">
+{% include navigation.html %}
 </head>
+<body>
+</body>
